re PR c++/11525 (ICE/segfault on C++ code)

cp:
	PR c++/11525
	* parser.c (cp_parser_primary_expression): Do not set
	non-constant-p merely because it is a dependent scope.
testsuite:
	PR c++/11525
	* g++.dg/parse/constant4.C: New test.

From-SVN: r70041